# flow-sim

./: .gitignore  LICENSE  README.md  TEST.py  appkit.py  background.py  banks.dbf  banks.shp  banks.shx  boundary.py  calibration_rmse_curve.csv  case_study_lax.py  case_study_main.py  case_study_preissmann.py  case_study_preissmann_2pass.py  case_study_runner.py  case_study_settings.py  case_study_unified.py  channel.py  composite_trapezoids.csv  curve_fitting.py  downstream_bc.py  draw_channel.py  dsm.py  geometry - original.xlsx  geometry.xlsx  graph.py  high_release_rating_curve.csv  hydrograph.csv  hydrograph_curve.py  initial_conditions.py  lax.py  lax_model.py  low_release_rating_curve.csv  main.py  multi_reach.py  multi_reach_lax.py  multi_reach_preissmann.py  newton_raphson.py  preissmann.py  (+16 more)
Results/: Area.csv  Depth.csv  Discharge.csv  Velocity.csv
Results/Lax/: Area.csv  Depth.csv  Depth.xlsx  Discharge.csv  Discharge.xlsx  Velocity.csv
Results/Preissmann/: Area.csv  Depth.csv  Discharge.csv  Velocity.csv
cases/akbari_firoozi/: main.py  main_lax.py  main_preissmann.py  settings.py
cases/example/: main.py  settings.py
cases/gerd_roseires/: custom_functions.py  gerd_discharge.py  gerd_f.py  main.py  main_lax.py  main_preissmann.py  model.py  n_calibrate.py  roseires_rating_curve.py  section_approximator.py  settings.py  visual.py  (+1 more)
error_log/: Data.txt  Peak_amplitude_profile.csv  analytical_wave_celerity.csv  flow_area.csv  flow_rate.csv  status.txt
src/: boundary.py  channel.py  lax.py  main.py  preissmann.py  reach.py  solver.py  utility.py
(+142 files in other folders)
