[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydromodel"
version = "0.1.0"
description = "Simplified flood wave propagation model"
authors = [{name = "Mohammed Omer"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
